# deja

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  test_deja.py
data/: deja.1  deja.desktop  deja.service
debian/: changelog  control  copyright  deja.install  deja.manpages  rules
deja/: __init__.py  cli.py  clip.py  config.py  daemon.py  gdkwatch.py  gui.py  service.py  store.py  util.py  wayland.py
